; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_master_planner.c_UseGroupAggregateWithHLL.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_master_planner.c_UseGroupAggregateWithHLL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HLL_EXTENSION_NAME = common dso_local global i32 0, align 4
@HLL_FORCE_GROUPAGG_GUC_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"off\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @UseGroupAggregateWithHLL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UseGroupAggregateWithHLL(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32, i32* @HLL_EXTENSION_NAME, align 4
  %7 = call i32 @get_extension_oid(i32 %6, i32 1)
  store i32 %7, i32* %4, align 4
  store i8* null, i8** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @OidIsValid(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

12:                                               ; preds = %1
  %13 = load i32, i32* @HLL_FORCE_GROUPAGG_GUC_NAME, align 4
  %14 = call i8* @GetConfigOption(i32 %13, i32 1, i32 0)
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %21, label %17

17:                                               ; preds = %12
  %18 = load i8*, i8** %5, align 8
  %19 = call i64 @strcmp(i8* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %17, %12
  store i32 0, i32* %2, align 4
  br label %25

22:                                               ; preds = %17
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @QueryContainsAggregateWithHLL(i32* %23)
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %22, %21, %11
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @get_extension_oid(i32, i32) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i8* @GetConfigOption(i32, i32, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @QueryContainsAggregateWithHLL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
